hotfix, keypad issue on dark mode

--- a/src/components/Keypad/keypad.module.scss
+++ b/src/components/Keypad/keypad.module.scss
@@ -1,7 +1,13 @@
+@import "./src/scss/helpers/mixins";
+
 .keypad {
+  text-align: center;
   max-width: 312px;
   margin: 0 auto;
   font-size: 32px;
+  @include sm-down {
+    font-size: 25px;
+  }
   button {
     border-radius: 30px;
   }
@@ -23,4 +29,5 @@
 .display {
   text-align: center;
   margin-bottom: 18px;
+  color: black;
 }
